--- a/cambios.css
+++ b/cambios.css
@@ -1,4 +1,32 @@
+/* .mochila{
+    padding-left: 5%;
+    padding-right: 8%;    
+    padding-top: 100%;
+} */
 
+.caja_1
+{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 5vw;
+    padding-right: 8vw;    
+}
+.caja_2
+{
+    padding-top: 10vh;
+    font-size: 20px;
+} 
+.caja_3
+{
+    padding-top: 15px;
+    font-size: 20px ;
+}
+.shop
+{
+    padding-top: 3%;
+    padding-left:7%;
+    font-size: 18px;
+}
 .letras
 {
     padding-left: 8%;
@@ -17,8 +45,39 @@
     padding-left: 50%;
     top: 30%;
 }
+.letras4
+{
+    padding-top: 0%;
+    padding-left:7%;
+    font-size: 30px;
+}
+.pesos
+{
+    padding-top: 300px;
+    padding-left: 10px;
+}
+.details
+{
+    padding-top: 250px;
+    padding-left: 40px;
+}
+.sale{
+padding-top: 250px;
+padding-left: 1px;
 
-
+}
+.logotipo
+{
+    padding-left: 25px;
+    padding-top: 60px;
+    image-rendering: 50px;
+} 
+#buttontaza
+{
+    padding-top: 6px;
+    padding-left:10px ;
+   
+}
 *
 {
     padding: 0;
@@ -195,13 +254,16 @@ main .contenedor div
     width: 300px;
     height: 300px;
     font-size: 20px;
+    padding-left: 3%;
+    padding-top: 1%;
     border-radius: 5px;
 }
 .uno_1
 {
-    padding-top: 15vh;
-    padding-left: 4vw;
+    padding-top: 1%;
+    padding-left: 3%;
     font-size: 20px;
+    
   
 }
 .contenedor .dos
@@ -210,6 +272,8 @@ main .contenedor div
     width:300px;
     height: 300px;
     border-radius: 5px;
+    padding-left: 4% ;
+    padding-top: 2%;
     font-size: 20px;
 }
 .contenedor .tres
@@ -219,6 +283,10 @@ main .contenedor div
     height: 300px;
     border-radius: 5px;
     font-size: 20px;
+    padding-top: 2%;
+    padding-left: 3%;
+    min-height: 330px;
+
 }
 main .cajaprueba2
 {
@@ -261,68 +329,129 @@ main .contenedor1 div{
 }
 .contenedor1
 {
-    width: 100vw;
+    width: 5vw;
     height: 85vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #eb5757;
-   
+    background-color:white;
     border-radius: 5px;
     box-sizing: border-box;
 }
 .apoyo1
 {
-background-color: aqua;
+background-image: url(montaña.jpg);
 padding: 10px;
+width: 50vw;
+height: 60vh;
+padding-left: 200px;
+padding-right: 900px;
+background-repeat: no-repeat;
 }
 .apoyo2
 {
-background-color: aqua;
-padding: 10px;
+background-image: url(acampando.jpg);
 border-radius: 5px;
+padding: 3px;
+height: 100vh;
+width: 100vw;
+left: 500%;
+padding-left: 30%;
+background-repeat: no-repeat;
+background-size: cover;
+
+
 }
 .apoyo3
 {
-background-color: aqua;
+    background-image: url(taza.jpg);
+    border-radius: 5px;
+    padding: 3px;
+    height: 100px;
+    width: 100vw;
+    padding-left: 300%; 
+    padding-right: 300%;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 
 }
 .apoyo3_1
 {
-    padding-top: 60vh;
-    box-sizing: border-box;
+    background-image: url(mochila.jpg);
+    border-radius: 5px;
+    padding: 3px;
+    height: 100vh;
+    width: 100vw;
+    left: 100%;
+    padding-left: 10%;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 .contenedor3
 {
-    background-color: var(--secondary-color);
-   width: 600px;
-   height: 500px;
+   background-color: black;
+   color: white;
+   width: 50%;
+   height: 400px;
+   padding-left: 70px;
    display: inline-block;
    padding-right: 20vh;
+   z-index: -1;
+   margin-left: 40vw;
+   
    
 }
-
 .contenedor4
-{
-    display: inline-block;
-    width: 100vw;
-    height: 25vh;
-    background-color: var(--dark-color);
-    color: white;
-    top: 20px;
-    position: relative;
+    {
+        display: flex;
+        width: 100vw;
+        height: 25vh;
+        align-items: flex-end;
+         
+        background-color: black;
+        color: white;
+    }
+    .caja4
+    {
+        margin-left: -200px;
+        margin-bottom: 400vh;
+        padding-top: 10px;
+        width: 500px;
+        height: 800px;
+        z-index: 0;
+        background-image: url(paisaje_2.jpg);
+        background-repeat: no-repeat;
+    }
+    .mover
+    {
+        position: relative;
+        bottom: 20px;
+        color: white;
+        text-align: center;
+    }
+    .mover2
+    {
+        padding-left: 15vw;
+        padding-top: 100vh;
+    }
+
+
+footer{
+    padding-top: 90px;
+    padding-bottom: 90px;
+    background-color: black;
 }
-.mover
+.redes
 {
-    position: relative;
-    bottom: 20px;
-    color: white;
-    text-align: center;
+    padding-left: 900px;
 }
-main .apoyo7
+.logotipo
 {
-    text-align: center,justify;
-    
-    top: 10px;
-    left: 5px;
-}
+    padding-left: 50px;
+    top:50px;
+    width: 60px;
+    padding-top: 60px;
+    image-rendering: 50px;
+} 
